--- a/_includes/_layouts/default.html
+++ b/_includes/_layouts/default.html
@@ -26,3 +26,6 @@
   <script src="/assets/js/app.js"></script>
 </body>
 </html>
+
+<link rel="stylesheet" href="/assets/css/style.css">
+<script defer src="/assets/js/app.js"></script>
