--- a/_includes/_layouts/default.html
+++ b/_includes/_layouts/default.html
@@ -27,5 +27,5 @@
 </body>
 </html>
 
-<link rel="stylesheet" href="/assets/css/style.css">
-<script defer src="/assets/js/app.js"></script>
+<link rel="stylesheet" href="/assets/css/style.css?v=1">
+<script defer src="/assets/js/app.js?v=1"></script>
